--- a/feature_components/src/main/res/values/strings.xml
+++ b/feature_components/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="received">Получено</string>
+    <string name="installed">установлено</string>
+    <string name="discarded">списано</string>
+
 </resources>
