--- a/feature_components/src/main/res/values/strings.xml
+++ b/feature_components/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="received">Получено</string>
-    <string name="installed">установлено</string>
-    <string name="discarded">списано</string>
-
+    <string name="installed">Установлено</string>
+    <string name="discarded">Списано</string>
 </resources>
