--- a/feature_login/src/main/res/values/strings.xml
+++ b/feature_login/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login">Login</string>
     <string name="password">Password</string>
+    <string name="userName">Name</string>
     <string name="guest">Guest</string>
     <string name="restore_password">Restore password</string>
     <string name="create_account">Create account</string>
+    <string name="registration">Registration</string>
+    <string name="mail">mail</string>
+    <string name="back">back</string>
 </resources>
