Правки: build.gradle в feature_components: Убрал закомментированный код
feature_components:
Перенёс объявление binding в onViewCreated и объявил через метод bind
Вынес проверку сети из фрагмента во вью модель
Перенёс snackBar в Extantion.kt и сделал extantion функцией для фрагмента
Вынес строковые значения статусов в константы в ComponentsViewModel.kt
Переименовал репозитории и интерактор
Вынес некоторые значения в dimens.xml, colors.xml и strings.xml (значения в styles.xml в том числе)
убрал лишние коллбеки
Исправил форматирование, Ctrl+Alt+L

feature_insert_data:
Переименовал репозитории и интерактор
Вынес snackBar в Extantion.kt
Убрал лишние коллбеки
Вынес сообщения для snackBar в strings.xml
Убрал закоментированный код

Прочее:
Убрал star import
Исправил доку

Добавлено:
CallbackDataFromFirebase.kt - интерфейс для получения данных из firebase
NetworkDelegate.kt - делегат для работы с сетью
Добавил NetworkDelegate.kt к зависимостям и имплементировал в ComponentsViewModel.kt

--- a/feature_components/src/main/res/values/strings.xml
+++ b/feature_components/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="received">Получено</string>
     <string name="installed">Установлено</string>
     <string name="discarded">Списано</string>
+    <string name="network_is_unavailable">Нет подключения к интернету</string>
 </resources>
