--- a/feature_insert_data/src/main/res/values/strings.xml
+++ b/feature_insert_data/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="date_of_send">Дата отправки:</string>
     <string name="default_date">01.01.2022</string>
     <string name="add_in_base">Добавить в базу</string>
+    <string name="incorrect_date">Некорректная дата</string>
+    <string name="component_added">Компонент добавлен</string>
+    <string name="please_fill_all_fields">Пожалуйста, заполните все поля</string>
     <string-array name="categories">
         <item>Процессоры</item>
         <item>Видеокарты</item>
